@@ -10,6 +10,7 @@
     * allow assignment of regular file objects
     * validation of file format and file size [Kyle Maxwell]
     * validation of image dimensions [Lee O'Mara]
+    * file permissions can be set via :permissions option
 
 0.3.1
     * make object with file_columns serializable
